--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 14 Pro'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.6.5",
+    "mobx": "^6.12.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "18.2.0",
-    "react-native": "0.72.7"
+    "react-native": "0.72.7",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
